  * phonon4qt5-backend-null should only conflict with other
    phonon4qt5-backends.
  * update libphonon4qt5-dev.install package
  * Add symbols files for libphonon4qt5 and libphonon4qt5experimental4
  * Add override_dh_strip target to correctly build libphonon-dbg (qt4)
    and libphonon4qt5-dbg (qt5) debug packages.
  * Add qttools5-dev to build qt5 phononwidgets designer support
    library.

 -- Diane Trout <diane@ghic.org>  Tue, 09 Sep 2014 10:55:34 -0700

phonon (4:4.7.2-1) unstable; urgency=low

  * Team upload.

  [ Pino Toscano ]
  * Fix the watch file.
  * phonon: explicitly lists all the backends as suggests, without relying on
    ${phonon:Recommended-Backend}.

  [ Felix Geyer ]
  * New upstream release.

 -- Felix Geyer <fgeyer@debian.org>  Mon, 18 Aug 2014 20:46:36 +0200

phonon (4:4.7.1-1) unstable; urgency=low

  * Team upload.
  * New upstream release.
  * Remove the extra 0 used to avoid the "really" in the versioning.
  * Remove no_rpath.patch. The logic of the patch is now available in the
    upstream code.
  * Update symbols file. This version adds a new symbol.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 09 Dec 2013 16:31:51 -0300

phonon (4:4.7.0.0-2) unstable; urgency=low

  * Confirm symbol file on arm*: fixes FTBFSes.

 -- Modestas Vainius <modax@debian.org>  Tue, 05 Nov 2013 19:39:46 +0200

phonon (4:4.7.0.0-1) unstable; urgency=low

  * New upstream release (4.7.0).
  * Adapt no_rpath.patch to upstream changes.
  * Refresh phonon-inc.patch.
  * Update install files.
  * Update symbol files.
  * Drop phonon-backend-xine transitional package. No longer needed since it
    has already been released with Wheezy.
  * Bump Standards-Version to 3.9.5: no further changes needed.
  * Use canonical Vcs URLs.
  * No longer explicitly pass multiarch LIB_SUFFIX to cmake. Phonon gets the
    multiarch libdir from cmake (as of cmake 2.8.7).

 -- Modestas Vainius <modax@debian.org>  Tue, 05 Nov 2013 13:04:32 +0200
