@@ -1,0 +1,7 @@
+#!/bin/sh
+
+set -e
+
+#INCLUDE debian/phonon4qt5-backend-null.dc-config.in#
+
+#DEBHELPER#
