@@ -1,0 +1,18 @@
+#!/bin/sh
+
+set -e
+
+case "$1" in
+    *upgrade)
+        # Do not touch phonon4qt5-backend-null/isnt_functional on upgrades
+    ;;
+    *)
+        if [ -e /usr/share/debconf/confmodule ]; then
+            . /usr/share/debconf/confmodule
+            db_fset phonon4qt5-backend-null/isnt_functional seen false || true
+            db_unregister phonon4qt5-backend-null/isnt_functional || true
+        fi
+    ;;
+esac
+
+#DEBHELPER#
