@@ -1,0 +1,18 @@
+Template: phonon4qt5-backend-null/isnt_functional_title
+Type: title
+_Description: Warning: Phonon4Qt5 is not functional
+
+Template: phonon4qt5-backend-null/isnt_functional
+Type: note
+#flag:comment:4
+# Translators: do not translate variable names
+# only translate "(recommended)" (the one in parenthesis)
+_Description: Missing back-end for Phonon4Qt5
+ Applications using Phonon4Qt5 (the KF 5 multimedia framework) will produce
+ no audio or video output, because only a dummy Phonon back-end is
+ installed on this system. This is typically an unintended configuration.
+ .
+ To restore full Phonon4Qt5 multimedia capabilities, install one of the real
+ Phonon4Qt5 back-end packages which are currently available for this system:
+ .
+ ${recommended_backend} (recommended)${other_backends}
