@@ -18,6 +18,8 @@ phonon (4:4.8.0-1) UNRELEASED; urgency=medium
     and libphonon4qt5-dbg (qt5) debug packages.
   * Add qttools5-dev to build qt5 phononwidgets designer support
     library.
+  * Merge in changes from Kubuntu to support Qt5 debconf warning. 
+    (Done by jriddel)
 
  -- Diane Trout <diane@ghic.org>  Tue, 09 Sep 2014 10:55:34 -0700
 
